--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
             <div class="container">
                 <h1>Affordable Professional Websites</h1>
                 <p>I can make a professional website for you!</p>
+                <hr>
+                <section>
+                    <p>Built by beck</p>
+                    <p>find me on
+                        <a href="https://www.facebook.com/beck.tamang.10/"
+                        target="_blank" class="btn btn-primary btn-sm">facebook</a>
+                    </p>
+                </section>
             </div>
         </section>
 
